--- a/src/styles/base/_global.scss
+++ b/src/styles/base/_global.scss
@@ -8,7 +8,7 @@ body {
 	text-rendering: optimizeLegibility;
 	color: #666;
 	background-color: #EEEFF3;
-	font-size: 10px;
+	/*font-size: 10px;*/
 	height: 100%;
 }
 
