Add constants to scss, remove unneeded font styling, and fix up menu a bit

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
 <app-menu></app-menu>
 
-<ul>
-  	<li *ngFor="let user of users">{{ user.name }}</li>
-</ul>
+<div class="body-with-header">
+	<ul>
+		<li *ngFor="let user of users">{{ user.name }}</li>
+	</ul>
+</div>
