--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,15 +1,12 @@
-<nav class="navbar navbar-expand-md navbar-dark bg-dark py-0 fixed-top menu">
+<nav class="navbar navbar-expand-md navbar-dark bg-dark py-0 fixed-top menu header">
 	<div class="container">
-		<!--<h1 class="navbar-brand header__brand">
-			<span class="header__brand-name type__desc">Calendar</span>
-		</h1>-->
 		<span class="navbar-brand type__desc">Calendar</span>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-collapse" aria-controls="navbar-collapse" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
 		
 		<div class="collapse navbar-collapse" id="navbar-collapse">
-			<ul class="navbar-nav ml-auto header__nav type__title type__title--darker">
+			<ul class="navbar-nav ml-auto type__title type__title--darker">
 				<li class="nav-item dropdown">
 					<a class="nav-link dropdown-toggle" href="#" id="editDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 						<i class="fa fa-pencil"></i> Edit <span class="caret"></span>
