--- a/src/styles/base/_global.scss
+++ b/src/styles/base/_global.scss
@@ -5,15 +5,13 @@ html {
 body {
 	font-family: 'Source Sans Pro', 'Helvetica', sans-serif;
 	-webkit-font-smoothing: antialiased;
-	text-rendering: optimizeLegibility;
-	color: #666;
-	background-color: #EEEFF3;
-	/*font-size: 10px;*/
+	color: $text-color;
+	background-color: $background-color;
 	height: 100%;
 }
 
 .body-with-header {
-	padding-top: 5em; /* Account for the header */
+	padding-top: $header-size;
 }
 
 a,
@@ -22,7 +20,7 @@ a:visited,
 a:hover,
 a:active,
 a:focus {
-	color: #666;
+	color: $text-color;
 	text-decoration: none;
 	outline: none;
 	border: 0;
