--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -17,11 +17,11 @@
 				</li>
 				<li class="nav-item dropdown">
 					<a class="nav-link dropdown-toggle" href="#" id="modeDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-						<i class="fa fa-eye"></i> <span id="view-label"></span> <span class="caret"></span>
+						<i class="fa fa-eye"></i> {{ selectedViewType }} <span class="caret"></span>
 					</a>
 					<div class="dropdown-menu dropdown-menu-right" aria-labelledby="modeDropdown">
-						<a class="dropdown-item" id="month-trigger" href="#">Month</a>
-						<a class="dropdown-item" id="year-trigger" href="#">Year</a>
+						<a class="dropdown-item" id="month-trigger" href="#" [ngClass]="{active: selectedViewType === 'Month'}" (click)="selectedViewType = 'Month'">Month</a>
+						<a class="dropdown-item" id="year-trigger" href="#" [ngClass]="{active: selectedViewType === 'Year'}" (click)="selectedViewType = 'Year'">Year</a>
 					</div>
 				</li>
 			</ul>
