Move menu css into its own file, change to scss, and clean up some other style files

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,8 +1,6 @@
-@import "base/_constants.scss";
 @import "base/_global.scss";
-/*@import "modules/_mixins.scss";*/
-@import "modules/_header.scss";
-@import "modules/_type.scss";
+/*@import "base/_mixins.scss";*/
+@import "base/_type.scss";
 @import "modules/_calendar.scss";
 @import "modules/_cal-year.scss";
 @import "modules/_event-icon.scss";
