--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-md navbar-dark bg-dark py-0 fixed-top menu header">
+<nav class="navbar navbar-expand-md navbar-dark bg-dark py-0 fixed-top">
 	<div class="container">
 		<span class="navbar-brand type__desc">Calendar</span>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-collapse" aria-controls="navbar-collapse" aria-expanded="false" aria-label="Toggle navigation">
