Change from reading fake users in db to reading events, and move that code to the calendar component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,5 @@
 <app-menu></app-menu>
 
 <div class="body-with-header">
-	<ul>
-		<li *ngFor="let user of users">{{ user.name }}</li>
-	</ul>
+	<app-calendar></app-calendar>
 </div>
