--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,9 @@
 <app-menu></app-menu>
 
 <div class="body-with-header">
-	<app-calendar></app-calendar>
+	<div class="cal__container container-fluid">
+		<app-month-calendar></app-month-calendar>
+		
+		<div id="cal-year" class='cal cal-year'></div>
+	</div>
 </div>
