Make menu actually adjust the view

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<app-menu></app-menu>
+<app-menu (viewChanged)="showing = $event"></app-menu>
 
 <div class="body-with-header">
 	<div class="cal__container container-fluid">
