--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -20,8 +20,8 @@
 						<i class="fa fa-eye"></i> {{ selectedViewType }} <span class="caret"></span>
 					</a>
 					<div class="dropdown-menu dropdown-menu-right" aria-labelledby="modeDropdown">
-						<a class="dropdown-item" id="month-trigger" href="#" [ngClass]="{active: selectedViewType === 'Month'}" (click)="selectedViewType = 'Month'">Month</a>
-						<a class="dropdown-item" id="year-trigger" href="#" [ngClass]="{active: selectedViewType === 'Year'}" (click)="selectedViewType = 'Year'">Year</a>
+						<a class="dropdown-item" id="month-trigger" href="#" [ngClass]="{active: selectedViewType === 'Month'}" (click)="onViewTypeSelected('Month')">Month</a>
+						<a class="dropdown-item" id="year-trigger" href="#" [ngClass]="{active: selectedViewType === 'Year'}" (click)="onViewTypeSelected('Year')">Year</a>
 					</div>
 				</li>
 			</ul>
