--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,5 +1,5 @@
 @import "base/_global.scss";
-/*@import "base/_mixins.scss";*/
+@import "base/_mixins.scss";
 @import "base/_type.scss";
 @import "modules/_calendar.scss";
 @import "modules/_cal-year.scss";
