--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -8,20 +8,20 @@
 		<div class="collapse navbar-collapse" id="navbar-collapse">
 			<ul class="navbar-nav ml-auto type__title type__title--darker">
 				<li class="nav-item dropdown">
-					<a class="nav-link dropdown-toggle" href="#" id="editDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+					<a class="nav-link dropdown-toggle" id="editDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 						<i class="fa fa-pencil"></i> Edit <span class="caret"></span>
 					</a>
 					<div class="dropdown-menu dropdown-menu-right" aria-labelledby="editDropdown">
-						<a class="dropdown-item" href="#" data-modal="">Event Types</a>
+						<a class="dropdown-item" data-modal="">Event Types</a>
 					</div>
 				</li>
 				<li class="nav-item dropdown">
-					<a class="nav-link dropdown-toggle" href="#" id="modeDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-						<i class="fa fa-eye"></i> {{ selectedViewType }} <span class="caret"></span>
+					<a class="nav-link dropdown-toggle" id="modeDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+						<i class="fa fa-eye"></i> View <span class="caret"></span>
 					</a>
 					<div class="dropdown-menu dropdown-menu-right" aria-labelledby="modeDropdown">
-						<a class="dropdown-item" id="month-trigger" href="#" [ngClass]="{active: selectedViewType === 'Month'}" (click)="onViewTypeSelected('Month')">Month</a>
-						<a class="dropdown-item" id="year-trigger" href="#" [ngClass]="{active: selectedViewType === 'Year'}" (click)="onViewTypeSelected('Year')">Year</a>
+						<a class="dropdown-item" routerLinkActive="active" routerLink="/month">Month</a>
+						<a class="dropdown-item" routerLinkActive="active" routerLink="/year">Year</a>
 					</div>
 				</li>
 			</ul>
