--- a/src/app/calendar/year-calendar/year-calendar-sub/year-calendar-sub.component.html
+++ b/src/app/calendar/year-calendar/year-calendar-sub/year-calendar-sub.component.html
@@ -3,11 +3,11 @@
 		<div class="cal-year__container">
 			<div class="cal-year__controls clndr-controls">
 				<div class="clndr-control-button">
-					<span class="clndr-previous-button" (click)="onPreviousClicked()"><i class="fa fa-chevron-left"></i> Previous</span>
+					<span class="clndr-previous-button" (click)="calendarModel.previousInterval()"><i class="fa fa-chevron-left"></i> Previous</span>
 				</div>
 				<div class="clndr-control-title">{{ year }}</div>
 				<div class="clndr-control-button rightalign">
-					<span class="clndr-next-button" (click)="onNextClicked()">Next <i class="fa fa-chevron-right"></i></span>
+					<span class="clndr-next-button" (click)="calendarModel.nextInterval()">Next <i class="fa fa-chevron-right"></i></span>
 				</div>
 			</div>
 			<div class="row cal-year__row">
