--- a/src/styles/modules/_calendar.scss
+++ b/src/styles/modules/_calendar.scss
@@ -147,6 +147,7 @@
 						& .day-icon {
 							height: 1.5em;
 							width: 1.5em;
+							cursor: pointer;
 							
 							&--small {
 								height: .4em !important;
