--- a/src/app/calendar/month-calendar/month-calendar-sub/month-calendar-sub.component.html
+++ b/src/app/calendar/month-calendar/month-calendar-sub/month-calendar-sub.component.html
@@ -2,7 +2,7 @@
 	<div class="clndr">
 		<div class="clndr-controls">
 			<div class="clndr-control-button">
-				<span class="clndr-previous-button" (click)="calendarModel.previousInterval()"><i class="fa fa-chevron-left"></i> Previous</span>
+				<span class="clndr-previous-button" (click)="calendarModel.previousInterval()"><i class="fa fa-chevron-left"></i> Prev</span>
 			</div>
 			<div class="clndr-control-title">{{ month }} {{ year }}</div>
 			<div class="clndr-control-button rightalign">
