--- a/src/app/calendar/year-calendar/year-calendar-sub/year-calendar-sub.component.html
+++ b/src/app/calendar/year-calendar/year-calendar-sub/year-calendar-sub.component.html
@@ -3,7 +3,7 @@
 		<div class="cal-year__container">
 			<div class="cal-year__controls clndr-controls">
 				<div class="clndr-control-button">
-					<span class="clndr-previous-button" (click)="calendarModel.previousInterval()"><i class="fa fa-chevron-left"></i> Previous</span>
+					<span class="clndr-previous-button" (click)="calendarModel.previousInterval()"><i class="fa fa-chevron-left"></i> Prev</span>
 				</div>
 				<div class="clndr-control-title">{{ year }}</div>
 				<div class="clndr-control-button rightalign">
