Change routing paths, and add config page with event types table

--- a/src/app/calendar/month-calendar/month-calendar.component.html
+++ b/src/app/calendar/month-calendar/month-calendar.component.html
@@ -1,1 +1,3 @@
-<div id="cal" class='cal cal-month' #cal style="display: none"></div>
+<div class="cal__container container-fluid">
+	<div id="cal" class='cal cal-month' #cal style="display: none"></div>
+</div>
