--- a/src/app/calendar/year-calendar/year-calendar.component.html
+++ b/src/app/calendar/year-calendar/year-calendar.component.html
@@ -1,1 +1,3 @@
-<div id="cal" class='cal cal-year' #cal style="display: none"></div>
+<div class="cal__container container-fluid">
+	<div id="cal" class='cal cal-year' #cal style="display: none"></div>
+</div>
