--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -6,23 +6,20 @@
 		</button>
 		
 		<div class="collapse navbar-collapse" id="navbar-collapse">
-			<ul class="navbar-nav ml-auto type__title type__title--darker">
-				<li class="nav-item dropdown">
-					<a class="nav-link dropdown-toggle" id="editDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-						<i class="fa fa-pencil"></i> Edit <span class="caret"></span>
-					</a>
-					<div class="dropdown-menu dropdown-menu-right" aria-labelledby="editDropdown">
-						<a class="dropdown-item" data-modal="">Event Types</a>
-					</div>
-				</li>
-				<li class="nav-item dropdown">
+			<ul class="navbar-nav ml-auto type__title">
+				<li class="nav-item dropdown" routerLinkActive="active">
 					<a class="nav-link dropdown-toggle" id="modeDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 						<i class="fa fa-eye"></i> View <span class="caret"></span>
 					</a>
 					<div class="dropdown-menu dropdown-menu-right" aria-labelledby="modeDropdown">
-						<a class="dropdown-item" routerLinkActive="active" routerLink="/month">Month</a>
-						<a class="dropdown-item" routerLinkActive="active" routerLink="/year">Year</a>
+						<a class="dropdown-item" routerLinkActive="active" routerLink="/cal/month">Month</a>
+						<a class="dropdown-item" routerLinkActive="active" routerLink="/cal/year">Year</a>
 					</div>
+				</li>
+				<li class="nav-item" routerLinkActive="active">
+					<a class="nav-link" routerLink="/config">
+						<i class="fa fa-cog"></i> Config
+					</a>
 				</li>
 			</ul>
 		</div>
