Don't need to pass in content to EditEventTypeModal

--- a/src/app/config/edit-event-types/edit-event-types.component.html
+++ b/src/app/config/edit-event-types/edit-event-types.component.html
@@ -17,9 +17,7 @@
 				<img class="icon" src="/assets/event-type-icons/{{ eventType._id }}.svg" alt="{{ eventType._id }}">
 			</td>
 			<td>
-				<app-edit-event-type-modal [eventType]="eventType">
-					<i class="icon-btn fa fa-pencil"></i>
-				</app-edit-event-type-modal>
+				<app-edit-event-type-modal [eventType]="eventType"></app-edit-event-type-modal>
 			</td>
 		</tr>
 	</tbody>
