Implement add event type and fix delete event type

--- a/src/app/config/edit-event-types/edit-event-types.component.html
+++ b/src/app/config/edit-event-types/edit-event-types.component.html
@@ -1,4 +1,7 @@
-<h2 class="type__title">Event Types</h2>
+<div>
+	<app-add-event-type-modal class="header-btn"></app-add-event-type-modal>
+	<h2 class="type__title">Event Types</h2>
+</div>
 
 <table>
 	<thead>
