--- a/src/styles/base/_constants.scss
+++ b/src/styles/base/_constants.scss
@@ -1,4 +1,19 @@
 $header-size: 50px;
 
 $text-color: #666;
+$text-color-light: seashell;
 $background-color: #EEEFF3;
+$inactive-color: #ddd;
+$day-color: #F6F7F9;
+$day-color-hover: #eee;
+$border-color: #ccc;
+$border-color-selected: black;
+
+$primary-color-1: #0D70A6;
+
+$primary-color-2: #9AD6E3;
+$primary-color-2-1: #72c6d8;
+
+$font-family-title: 'Source Sans Pro', 'Helvetica', sans-serif;
+$font-family-mono: 'Droid Sans Mono', monospace;
+$font-family-description: 'Raleway', sans-serif;
