--- a/src/styles/modules/_calendar.scss
+++ b/src/styles/modules/_calendar.scss
@@ -1,3 +1,5 @@
+@import '../base/_constants.scss';
+
 .cal {
 	margin: 0 auto;
 	padding-top: 3em;
@@ -13,170 +15,113 @@
 		max-width: 60%;
 	}
 	
-	& .clndr {
-		& .clndr-controls {
-			display: inline-block;
-			width: 100%;
-			position: relative;
-			font-family: 'Droid Sans Mono';
-			
-			& .clndr-control-title {
-				float: left;
-				width: 34%;
-				text-align: center;
-			}
-			
-			& .clndr-control-button {
-				float: left;
-				width: 33%;
-				
-				&.rightalign {
-					text-align: right;
-				}
-				
-				& .clndr-next-button,
-				& .clndr-previous-button {
-					cursor: pointer;
-					user-select: none;
-					
-					&:hover {
-						background: #ddd;
-					}
-					
-					&.inactive {
-						opacity: 0.5;
-						
-						&:hover {
-							background: none;
-							cursor: default;
-						}
-					}
-				}
-			}
-		}
+	&__container {
+		height: 100%;
+	}
+	
+	& .clndr-block {
+		margin-top: 10px;
+	}
+}
+
+.clndr-table {
+	table-layout: fixed;
+	border-collapse: collapse;
+	width: 100%;
+	
+	& th,
+	& td {
+		border: 1px solid $border-color;
+	}
+	
+	& thead tr {
+		height: 30px;
+		font-size: 0.78571429em;
+		background-color: $primary-color-1;
 		
-		& .clndr-block {
-			margin-top: 10px;
-		}
-		
-		& .clndr-table {
-			table-layout: fixed;
-			border-collapse: collapse;
-			width: 100%;
-			font-family: 'Raleway';
-			
-			& th,
-			& td {
-				border: 1px solid #ccc;
-			}
-			
-			& .header-days {
-				height: 30px;
-				font-size: 0.78571429em;
-				background: #0D70A6;
-				
-				& .header-day {
-					vertical-align: middle;
-					text-align: center;
-					color: seashell;
-				}
-			}
-			
-			& .table-days {
-				height: 120px;
-				
-				&--short {
-					height: 55px !important;
-				}
-				
-				& td {
-					vertical-align: top;
-					width: 100%;
-					height: inherit;
-				}
-				
-				& .day {
-					background: #F6F7F9;
-					position: relative;
-					
-					&:hover {
-						background: #eee;
-					}
-					
-					&.today {
-						background: #9AD6E3;
-						
-						&:hover {
-							background: #72c6d8;
-						}
-					}
-					
-					&.inactive {
-						background: #ddd;
-					}
-					
-					&.selected {
-						outline: 1px dashed #000;
-						outline-offset: -1px;
-					}
-					
-					&.empty,
-					&.adjacent-month {
-						background: #ddd;
-						
-						&:hover {
-							background: #ccc;
-						}
-					}
-					
-					& .day-contents {
-						max-height: 40px;
-						padding: 8px;
-						font-size: 0.85714286em;
-						text-align: right;
-					}
-					
-					& .day-icons {
-						max-height: 80px;
-						overflow: auto;
-						padding: 0 5px;
-						
-						&--center {
-							text-align: center;
-						}
-						
-						& .day-icon {
-							height: 1.5em;
-							width: 1.5em;
-							cursor: pointer;
-							
-							&--small {
-								height: .4em !important;
-								width: .4em !important;
-							}
-						}
-					}
-					
-					& .day-event-btn {
-						position: absolute;
-						top: .65em;
-						left: 5px;
-						display: none;
-						pointer-events: none;
-						cursor: auto;
-					}
-					
-					&.selected .day-event-btn {
-						display: block;
-						pointer-events: auto;
-						cursor: pointer;
-					}
-				}
-			}
+		& th {
+			vertical-align: middle;
+			text-align: center;
+			color: $text-color-light;
 		}
 	}
 	
-	&__container {
-		height: 100%;
+	& tbody tr {
+		height: 120px;
+		
+		& td {
+			vertical-align: top;
+			width: 100%;
+			height: inherit;
+			
+			&.empty {
+				background-color: $background-color;
+			}
+			
+			&.day {
+				background: $day-color;
+				position: relative;
+				
+				&:hover {
+					background: $day-color-hover;
+				}
+				
+				&.today {
+					background: $primary-color-2;
+					
+					&:hover {
+						background: $primary-color-2-1;
+					}
+				}
+				
+				&.selected {
+					outline: 1px dashed $border-color-selected;
+					outline-offset: -1px;
+				}
+				
+				&.empty,
+				&.adjacent-month {
+					background-color: $inactive-color;
+					
+					&:hover {
+						background-color: $border-color;
+					}
+				}
+				
+				& .day-contents {
+					max-height: 40px;
+					padding: 8px;
+					font-size: 0.85714286em;
+					text-align: right;
+				}
+				
+				& .day-icons {
+					max-height: 80px;
+					overflow: auto;
+					padding: 0 5px;
+				}
+				
+				& .day-icon {
+					height: 1.5em;
+					width: 1.5em;
+					cursor: pointer;
+				}
+				
+				& .day-event-btn {
+					position: absolute;
+					top: .65em;
+					left: 5px;
+					display: none;
+					pointer-events: none;
+					cursor: auto;
+				}
+				
+				&.selected .day-event-btn {
+					display: block;
+					pointer-events: auto;
+					cursor: pointer;
+				}
+			}
+		}
 	}
 }
