--- a/src/app/calendar/month-calendar/month-calendar.component.html
+++ b/src/app/calendar/month-calendar/month-calendar.component.html
@@ -1,3 +1,3 @@
 <div class="cal__container container-fluid">
-	<div id="cal" class='cal cal-month' #cal style="display: none"></div>
+	<div id="cal" class='cal' #cal style="display: none"></div>
 </div>
