Calendar table component

--- a/src/app/calendar/calendar-controls/calendar-controls.component.html
+++ b/src/app/calendar/calendar-controls/calendar-controls.component.html
@@ -1,4 +1,4 @@
-<div [ngClass]="{'cal-year__controls': isYearView()}" class="clndr-controls type__label type__label--emphasis">
+<div class="clndr-controls type__label type__label--emphasis">
 	<div class="clndr-control-button">
 		<span class="clndr-previous-button" (click)="calendarModel.previousInterval()"><i class="fa fa-chevron-left"></i> Prev</span>
 	</div>
