--- a/src/app/calendar/month-calendar/month-calendar-sub/month-calendar-sub.component.html
+++ b/src/app/calendar/month-calendar/month-calendar-sub/month-calendar-sub.component.html
@@ -1,25 +1,4 @@
 <div class="cal">
-	<app-calendar-controls [viewType]="viewType" [title]="month + ' ' + year" [calendarModel]="calendarModel"></app-calendar-controls>
-	<table class="clndr-table clndr-block type__desc">
-		<thead>
-			<tr>
-				<th *ngFor="let day of daysOfTheWeek">{{ day }}</th>
-			</tr>
-		</thead>
-		<tbody>
-			<tr *ngFor="let week of weeks; let i = index">
-				<td *ngFor="let day of weeks[i]" class="{{ day.classes }}" [ngClass]="{selected: selectedDay && day.classes.indexOf(selectedDay) != -1}" (click)="onDayClicked(day)">
-					<div class="day-contents">{{ day.day }}</div>
-					<div *ngIf="day.events.length > 0" class="day-icons">
-						<span *ngFor="let event of day.events" class="day-icon-container">
-							<app-edit-event-modal [event]="event">
-								<img class="day-icon" src="/assets/event-type-icons/{{ event.eventCode }}.svg">
-							</app-edit-event-modal>
-						</span>
-					</div>
-					<app-add-event-modal *ngIf="day.date" [date]="day.date.toDate()"></app-add-event-modal>
-				</td>
-			</tr>
-		</tbody>
-	</table>
+	<app-calendar-controls [title]="month + ' ' + year" [calendarModel]="calendarModel"></app-calendar-controls>
+	<app-calendar-table [viewType]="viewType" [daysOfTheWeek]="daysOfTheWeek" [weeks]="weeks" [calendarModel]="calendarModel"></app-calendar-table>
 </div>
