Get viewType from calendarModel

--- a/src/app/calendar/month-calendar/month-calendar-sub/month-calendar-sub.component.html
+++ b/src/app/calendar/month-calendar/month-calendar-sub/month-calendar-sub.component.html
@@ -1,4 +1,4 @@
 <div class="cal">
 	<app-calendar-controls [title]="month + ' ' + year" [calendarModel]="calendarModel"></app-calendar-controls>
-	<app-calendar-table [viewType]="viewType" [daysOfTheWeek]="daysOfTheWeek" [weeks]="weeks" [calendarModel]="calendarModel"></app-calendar-table>
+	<app-calendar-table [daysOfTheWeek]="daysOfTheWeek" [weeks]="weeks" [calendarModel]="calendarModel"></app-calendar-table>
 </div>
