--- a/src/app/calendar/year-calendar/year-calendar-sub/year-calendar-sub.component.html
+++ b/src/app/calendar/year-calendar/year-calendar-sub/year-calendar-sub.component.html
@@ -4,7 +4,7 @@
 		<div class="row cal-year__row">
 			<div *ngFor="let month of months" class="clndr-block col-lg-4 col-sm-6">
 				<div class="cal-year__title type__desc type__desc--emphasis">{{ month.month.format("MMMM") }}</div>
-				<app-calendar-table [viewType]="viewType" [daysOfTheWeek]="daysOfTheWeek" [weeks]="month.weeks" [calendarModel]="calendarModel"></app-calendar-table>
+				<app-calendar-table [daysOfTheWeek]="daysOfTheWeek" [weeks]="month.weeks" [calendarModel]="calendarModel"></app-calendar-table>
 			</div>
 		</div>
 	</div>
