--- a/src/styles/base/_global.scss
+++ b/src/styles/base/_global.scss
@@ -5,7 +5,7 @@ html {
 }
 
 body {
-	font-family: 'Source Sans Pro', 'Helvetica', sans-serif;
+	font-family: $font-family-title;
 	-webkit-font-smoothing: antialiased;
 	color: $text-color;
 	background-color: $background-color;
