--- a/src/app/calendar/year-calendar/year-calendar-sub/year-calendar-sub.component.html
+++ b/src/app/calendar/year-calendar/year-calendar-sub/year-calendar-sub.component.html
@@ -7,5 +7,6 @@
 				<app-calendar-table [daysOfTheWeek]="daysOfTheWeek" [weeks]="month.weeks" [calendarModel]="calendarModel"></app-calendar-table>
 			</div>
 		</div>
+		<app-filters></app-filters>
 	</div>
 </div>
