Change month/year sub components to allow filters to go in the outer components

--- a/src/app/calendar/month-calendar/month-calendar.component.html
+++ b/src/app/calendar/month-calendar/month-calendar.component.html
@@ -1,3 +1,7 @@
 <div class="cal__container container-fluid">
-	<div id="cal" class='cal' #cal style="display: none"></div>
+	<div id="cal" style="display: none"></div>
+	<div class="cal">
+		<div #dummy style="display: none"></div>
+		<app-filters></app-filters>
+	</div>
 </div>
