--- a/src/app/calendar/year-calendar/year-calendar.component.html
+++ b/src/app/calendar/year-calendar/year-calendar.component.html
@@ -1,3 +1,9 @@
 <div class="cal__container container-fluid">
-	<div id="cal" class='cal cal-year' #cal style="display: none"></div>
+	<div id="cal" style="display: none"></div>
+	<div class='cal cal-year'>
+		<div class="cal-year__container">
+			<div #dummy style="display: none"></div>
+			<app-filters></app-filters>
+		</div>
+	</div>
 </div>
