--- a/src/app/calendar/year-calendar/year-calendar-sub/year-calendar-sub.component.scss
+++ b/src/app/calendar/year-calendar/year-calendar-sub/year-calendar-sub.component.scss
@@ -1,20 +1,4 @@
-.cal-year {
-	height: 100%;
-	
-	&__container {
-		display: flex;
-		flex-flow: column;
-		height: 100%;
-	}
-	
-	&__row {
-		flex: 0 1 auto;
-		overflow-y: auto;
-		margin-top: 10px;
-		margin-bottom: 10px;
-	}
-	
-	&__title {
-		text-align: center;
-	}
+:host {
+	display: flex;
+	flex-flow: column;
 }
