Type filter working

--- a/src/app/filters/filters.component.html
+++ b/src/app/filters/filters.component.html
@@ -1,7 +1,7 @@
 <div class="filter-summary">
 	<button class="filter-btn"><i class="fa fa-close" (click)="onClear()"></i></button>
 	<button class="filter-btn"><i class="fa" [ngClass]="{'fa-angle-up': !open, 'fa-angle-down': open}" (click)="onOpenToggle()"></i></button>
-	<input class="filter-btn" type="checkbox" [(checked)]="enabled">
+	<input class="filter-btn" type="checkbox" [checked]="enabled" (click)="onEnable($event.target.checked)">
 	<span class="filter-desc">Showing {{ calendarService.getEventsCount() }} events</span>
 </div>
 <div [hidden]="!open">
