--- a/src/app/filters/type-filter/type-filter.component.html
+++ b/src/app/filters/type-filter/type-filter.component.html
@@ -1,6 +1,6 @@
-<button class="filter-btn"><i class="fa fa-close" (click)="onClear()"></i></button>
-<input class="filter-btn" type="checkbox" [(checked)]="enabled">
+<button class="filter-btn" [disabled]="!filtersEnabled"><i class="fa fa-close" (click)="onClear()"></i></button>
+<input class="filter-btn" type="checkbox" [disabled]="!filtersEnabled" [checked]="enabled" (click)="onEnable($event.target.checked)">
 <span class="filter-desc">Type</span>
-<select (change)="onChange($event.target.value)">
+<select #types [disabled]="!filtersEnabled || !enabled" (change)="onChange($event.target.value)">
 	<option *ngFor="let eventType of eventTypes" [value]="eventType._id">{{ eventType.name }}</option>
 </select>
