--- a/src/app/filters/name-filter/name-filter.component.html
+++ b/src/app/filters/name-filter/name-filter.component.html
@@ -1,3 +1,6 @@
-<p>
-  name-filter works!
-</p>
+<div>
+	<button class="filter-btn" [disabled]="!filtersEnabled"><i class="fa fa-close" (click)="onClear()"></i></button>
+	<input class="filter-btn" type="checkbox" [disabled]="!filtersEnabled" [(ngModel)]="enabled" (change)="onEnable()">
+	<span class="filter-desc">Name</span>
+	<input type="text" [disabled]="!filtersEnabled || !enabled" (input)="onInput($event.target.value)" [(ngModel)]="selectedName">
+</div>
