--- a/src/app/filters/type-filter/type-filter.component.html
+++ b/src/app/filters/type-filter/type-filter.component.html
@@ -1,8 +1,12 @@
-<div>
-	<button class="filter-btn" [disabled]="!filtersEnabled"><i class="fa fa-close" (click)="onClear()"></i></button>
-	<input class="filter-btn" type="checkbox" [disabled]="!filtersEnabled" [(ngModel)]="enabled" (change)="onEnable()">
+<div class="filter">
 	<span class="filter-desc">Type</span>
 	<select [disabled]="!filtersEnabled || !enabled" [(ngModel)]="selectedType" (change)="onChange()">
 		<option *ngFor="let eventType of eventTypes" [value]="eventType._id">{{ eventType.name }}</option>
 	</select>
+	<span class="filter-btns">
+		<span class="filter-toggle">
+			<app-toggle-switch [on]="enabled" (changed)="onEnable($event)" [enabled]="filtersEnabled"></app-toggle-switch>
+		</span>
+		<button class="filter-btn" [disabled]="!filtersEnabled"><i class="fa fa-close" (click)="onClear()"></i></button>
+	</span>
 </div>
